# multithreaded_game

./: CMakeLists.txt  main.c  metadata.h
